--- a/.github/workflows/testci.yml
+++ b/.github/workflows/testci.yml
@@ -28,3 +28,9 @@ jobs:
 
       - name: Run TestNG suite
         run: mvn clean test -DsuiteXmlFile=Testng/testng.xml
+
+      - name: Upload Extent Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: ExtentReport
+          path: target/extent-report/Report_*.html
