--- a/.github/workflows/testciUserInput.yml
+++ b/.github/workflows/testciUserInput.yml
@@ -1,5 +1,5 @@
 # File: .github/workflows/selenium-testng-manual.yml
-name: Selenium TestNG Manual Run
+name: Selenium User Input TestNG Manual Run
 
 on:
   workflow_dispatch:   # Enables manual triggering from the Actions tab
