Modified workflow file name

--- a/.github/workflows/testciPassingSecrets.yml
+++ b/.github/workflows/testciPassingSecrets.yml
@@ -1,5 +1,5 @@
 # File: .github/workflows/selenium-testng-manual.yml
-name: Selenium User Input TestNG Manual Run
+name: Selenium User Input Passing secrets TestNG Manual Run
 
 on:
   workflow_dispatch:   # Enables manual triggering from the Actions tab
