Fixed workflow code

--- a/.github/workflows/testciPassingSecrets.yml
+++ b/.github/workflows/testciPassingSecrets.yml
@@ -20,8 +20,8 @@ jobs:
 
     env:
       HEAD_LESS: ${{ github.event.inputs.headlessOption }}
-      APP_USERNAME: ${{ secret.APP_USERNAME }}
-      APP_PASSWORD: ${{ secret.APP_PASSWORD }}
+      APP_USERNAME: ${{ secrets.APP_USERNAME }}
+      APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
 
     steps:
       - name: Checkout source code
